--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
 
 
 
-    <div ui-view autoscroll><p>Пока грузтся темплейт</p></div>
+    <div ui-view autoscroll><p>С любовью к чистоте</p></div>
 
 
 
