--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,8 @@
                     id:44480872,
                     clickmap:true,
                     trackLinks:true,
-                    accurateTrackBounce:true
+                    accurateTrackBounce:true,
+                    trackHash:true
                 });
             } catch(e) { }
         });
@@ -77,4 +78,6 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/44480872" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+
 </html>
