--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
 
 
 
-    <div ui-view autoscroll><p>С любовью к чистоте</p></div>
+    <div ui-view autoscroll><h1 class="startLoader">С любовью к чистоте</h1></div>
 
 
 
