--- a/client/index.html
+++ b/client/index.html
@@ -4,20 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <base href="/">
-    <title>Dinacleaning</title>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="source/js/bootstrap/css/bootstrap.min.css">
+    <title>Уборка в Москве - с любовью к чистоте | ДинаКлининг</title>
+    <meta name="description" content="Экологичный клининг в Москве по разумной цене. Уборка квартиры и дома. Поддерживающая, генеральная, уборка после ремонта, мойка окон.">
+    <meta name="keywords" content="уборка, клининг, мойка окон, москва, эколокичная уборка, экоуборка">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="source/js/bootstrap/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="assets/css/app.min.css">
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
 
     <script src="assets/js/app.js"></script>
 
-    <meta property="og:title" content="Уборка квартиры и мойка окон в Москве - персональный клининг!" />
+    <meta property="og:title" content="Уборка квартиры и мойка окон в Москве - экологичный клининг!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://dinacleaning.ru/" />
     <meta property="og:image" content="http://dinacleaning.ru/img/lognew.png" />
-    <meta property="og:site_name" content="Динаклининг - качественная уборка, ответственный подход" />
+    <meta property="og:site_name" content="Динаклининг - уборка в Москве, с любовью к чистоте" />
 
     <!--без Grunt-->
     <!--<script src="source/js/components/angular/angular.min.js"></script>-->
@@ -30,8 +33,6 @@
  -->
 
 </head>
-<!--<body ng-controller="SiteCtrl">-->
-<!--<body ng-controller="defaultCtrl">-->
 <body >
 <div class="container">
 
