--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,12 @@
     <meta property="og:image" content="http://dinacleaning.ru/img/lognew.png" />
     <meta property="og:site_name" content="Динаклининг - уборка в Москве, с любовью к чистоте" />
 
+
+    <link rel="shortcut icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/img/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="256x256" href="assets/img/favicon/apple-touch-icon-256x256.png">
     <!--без Grunt-->
     <!--<script src="source/js/components/angular/angular.min.js"></script>-->
     <!--<script src="source/js/components/angular-ui-router/angular-ui-router.js"></script>-->
