--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="256x256" href="assets/img/favicon/apple-touch-icon-256x256.png">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--без Grunt-->
     <!--<script src="source/js/components/angular/angular.min.js"></script>-->
     <!--<script src="source/js/components/angular-ui-router/angular-ui-router.js"></script>-->
