--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,19 @@
     <!--<link rel="stylesheet" href="source/js/bootstrap/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="assets/css/app.min.css">
 
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
+    <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
 
+    <!--<link rel="stylesheet" type="text/css" href="source/js/components/rs-plugin/css/style.css" media="screen" />-->
+
+    <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
+    <!--<script type="text/javascript" src="source/js/components/rs-plugin/js/jquery.themepunch.tools.min.js"></script>-->
+    <!--<script type="text/javascript" src="source/js/components/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>-->
+
+    <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
+    <!--<link rel="stylesheet" type="text/css" href="source/js/components/rs-plugin/css/settings.css" media="screen" />-->
+
+    <!-- App -->
     <script src="assets/js/app.js"></script>
 
     <meta property="og:title" content="Уборка квартиры и мойка окон в Москве - экологичный клининг!" />
@@ -70,6 +81,7 @@
 
 
 </body>
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
