slick carousel in process

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/app.min.css">
 
     <!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.js"></script>-->
-    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
     <!--<link rel="stylesheet" type="text/css" href="source/js/components/rs-plugin/css/style.css" media="screen" />-->
 
